Fix regression where default-pixel would persist when trimming layer contents.

BUG:442972