libs/ui/actions/kis_selection_action_factories.cpp
@@ -77,6 +77,12 @@ namespace ActionHelper {
 
         const KoColorSpace *cs = device->colorSpace();
 
+        // We need to allow for trimming from non-transparent defaultPixel layers.
+        // Default color should be phased out of use when the area in question is not aligned with image bounds.
+        // Otherwise, we can maintain default pixel.
+        const bool hasNonTransparentDefaultPixel = device->defaultPixel() != KoColor(Qt::transparent, device->colorSpace());
+        const bool needsTransparentPixel = selection && rc != image->bounds() && hasNonTransparentDefaultPixel;
+
         if (selection) {
             // Apply selection mask.
             KisPaintDeviceSP selectionProjection = selection->projection();
@@ -104,6 +110,12 @@ namespace ActionHelper {
                 }
             }
         }
+
+        if ( needsTransparentPixel ) {
+            device->setDefaultPixel(KoColor(Qt::transparent, device->colorSpace()));
+            device->purgeDefaultPixels();
+        }
+
         device->crop(rc);
     }
 
